--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,6 +8,13 @@ buildscript {
         minSdkVersion = 21
         compileSdkVersion = 31
         targetSdkVersion = 31
+        // Only using Android Support libraries
+        supportLibVersion = "28.0.0"
+
+        // Using Android with AndroidX
+        // androidXAnnotation = "1.1.0"
+        // androidXBrowser = "1.0.0"
+        // Put here other AndroidX dependencies
 
         if (System.properties['os.arch'] == "aarch64") {
             // For M1 Users we need to use the NDK 24 which added support for aarch64
