fix, feat: 앱결제 함수별 제공으로 변경
- 초기화 함수
- 상품가져오기 함수
- 결제하기 함수
- UI : HomeScreenNew추가
- lib_new : custominapp.js추가

* 기존 HomeScreen, lib은 임시 주석(결제성공 예제임)

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,6 +80,8 @@ import org.apache.tools.ant.taskdefs.condition.Os
 
 project.ext.react = [
     enableHermes: false,  // clean and rebuild if changing
+    // bundleInDebug: true,
+    /*bundleInRelease: true,*/
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
@@ -234,10 +236,14 @@ android {
             }
         }
         debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+            // storeFile file('debug.keystore')
+            // storePassword 'android'
+            // keyAlias 'androiddebugkey'
+            // keyPassword 'android'
+            storeFile file(MYAPP_UPLOAD_STORE_FILE)
+            storePassword MYAPP_UPLOAD_STORE_PASSWORD
+            keyAlias MYAPP_UPLOAD_KEY_ALIAS
+            keyPassword MYAPP_UPLOAD_KEY_PASSWORD
         }
     }
     buildTypes {
