--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,7 +42,11 @@ newArchEnabled=false
 # JAVA경로
 org.gradle.java.home=D:/develop/java/jdk-11.0.2
 
-MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
-MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+# MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+# MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+# MYAPP_UPLOAD_STORE_PASSWORD=chlwlgns27@
+# MYAPP_UPLOAD_KEY_PASSWORD=chlwlgns27@
+MYAPP_UPLOAD_STORE_FILE=test.keystore
+MYAPP_UPLOAD_KEY_ALIAS=testkey
 MYAPP_UPLOAD_STORE_PASSWORD=chlwlgns27@
 MYAPP_UPLOAD_KEY_PASSWORD=chlwlgns27@
